# signalhousesdk-public

php/: README.md  composer.json
php/php-documentation/: sdk-documentation.txt
php/src/: HttpClient.php  SignalHouseSDK.php
php/src/Domains/: Auth.php  Billing.php  Brands.php  Campaigns.php  Groups.php  Landings.php  Messages.php  Notifications.php  Numbers.php  Shortlinks.php  Subgroups.php  Subscriptions.php  Users.php  Webhooks.php
php/src/Exceptions/: SignalHouseException.php  ValidationException.php
python/: README.md  pyproject.toml  setup.py
python/python-documentation/: sdk-documentation.txt
python/signalhouse/: __init__.py  client.py  exceptions.py
python/signalhouse/domains/: __init__.py  auth.py  billing.py  brands.py  campaigns.py  groups.py  landings.py  messages.py  notifications.py  numbers.py  shortlinks.py  subgroups.py  subscriptions.py  users.py  webhooks.py
