[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalhouse"
version = "1.0.0"
description = "Python SDK for the SignalHouse API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SignalHouse LLC", email = "support@signalhouse.io"},
]
keywords = ["signalhouse", "sms", "mms", "10dlc", "messaging", "telecom", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/signalhousellc/signalhouse-python-sdk"
Documentation = "https://docs.signalhouse.io"
Repository = "https://github.com/signalhousellc/signalhouse-python-sdk"

[tool.setuptools.packages.find]
include = ["signalhouse*"]
